[tool.poetry]
name = "set-checker"
version = "0.1.0"
description = "Set checker"
authors = ["Nazli Ander <nazliander1@gmail.com>"]
readme = "README.md"
packages = [{include = "set_checker"}]

[tool.poetry.scripts]
set-checker = "set_checker.cli:main"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"
pydantic = "^2.10.4"
textual = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[tool.ruff]
line-length = 88
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
